# bicfit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
bicfit/: __init__.py  models.py  plot.py  post_fit.py  types.py
bicfit/results/: __init__.py  common.py  complex_mode.py  damped_cosine_mode.py  exponential_decay_mode.py  exponential_mode.py  real_mode.py
src/bicfit/: __init__.py  models.py  plot.py  post_fitting.py
src/bicfit/results/: complex_mode.py  damped_cosine_mode.py  exponential_decay_mode.py
tests/: test_complex_exponential.py  test_damped_cosine.py  test_exponential.py  test_match_real_modes.py
