[project]
name = "bicfit"
description = "General purpose exponential function fitting"
keywords = ["fit", "numerics"]
authors = [
    {name = "Adrien Bocquet", email = "adrienbocquet38@gmail.com"},
]
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0",
    "pytest-ordering",
    "pytest-sugar",
    "pytest-xdist",
]

[project.urls]
Repository = "https://github.com/abocquet/bicfit"
